# FACCHA

./: .clang-format  .gitignore  .travis.yml  .travis_no_we_dont_want_this_at_the_moment.yml.  CMakeLists.txt  FACCHA.cbp  LICENSE  README.md  debug.sh  main.cpp
include/: ColorConverter.h  ContourDetector.h  DistanceTransformer.h  FeatureExtraction.h  Image.h  ImageFilter.h  ImageFramework.h  ImageLoader.h  ImageManipulation.h  ImageSaver.h  ImageSearch.h  ImageStatistics.h  IntegralImage.h  PartRecognizer.h  PartTemplate.h
include/faccha/: ImageFeature.h
src/: CMakeLists.txt  ColorConverter.cpp  ContourDetector.cpp  DistanceTransformer.cpp  FeatureExtraction.cpp  Image.cpp  ImageFeature.cpp  ImageFeature.h  ImageFilter.cpp  ImageFramework.cpp  ImageLoader.cpp  ImageManipulation.cpp  ImageSaver.cpp  ImageSearch.cpp  ImageStatistics.cpp  IntegralImage.cpp  Makefile  PartRecognizer.cpp  PartTemplate.cpp  main.cpp
